--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,41 +1,27 @@
 name = "newsnow"
 compatibility_date = "2024-10-04"
 compatibility_flags = ["nodejs_compat"]
+pages_build_output_dir = "dist"
 
 [env.production]
-vars = { NODE_ENV = "production" }
+vars = { NODE_ENV = "production", ENABLE_CACHE = "true", INIT_TABLE = "true" }
 
-# 数据库配置（如果需要）
+# 数据库配置
 [[env.production.d1_databases]]
 binding = "DB"
-database_name = "newsnow-db"
-database_id = "your-database-id-here"
+database_name = "database1"
+database_id = "233ef401-7a7f-4c49-ae68-6b6997458f05"
 
-# KV 存储配置（用于缓存，可选）
+# KV 存储配置（用于缓存）
 [[env.production.kv_namespaces]]
 binding = "CACHE"
-id = "your-kv-namespace-id-here"
+id = "e1ccb58f79c44545a03d775458b6168f"
 
 [env.preview]
-vars = { NODE_ENV = "preview" }
+vars = { NODE_ENV = "preview", ENABLE_CACHE = "false" }
 
-# 预览环境的数据库配置
-[[env.preview.d1_databases]]
-binding = "DB"
-database_name = "newsnow-db-preview"
-database_id = "your-preview-database-id-here"
-
-# 预览环境的 KV 配置
-[[env.preview.kv_namespaces]]
-binding = "CACHE"
-id = "your-preview-kv-namespace-id-here"
-
-# Pages 专用配置
-[build]
-command = "pnpm run build"
-cwd = "."
-watch_dir = "src"
-
-# 兼容性设置
-[compatibility_flags]
-experimental = ["nodejs_compat"]
+# 预览环境的数据库配置（暂时注释掉）
+# [[env.preview.d1_databases]]
+# binding = "DB"
+# database_name = "newsnow-db-preview"
+# database_id = "your-preview-database-id-here"
